--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-	<div class="page-wrapper container">
+	<div class="page-wrapper">
 		<header>
 			<div class="top-menu">
 				<div class="row">
