--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
 											<option value="dguetta">David Guetta</option>
 											<option value="deadmau5">Deadmau5</option>
 											<option value="dfrancis">Dillon Francis</option>
+											<option value="diplo">Diplo</option>
 											<option value="disclosure">Disclosure</option>
 											<option value="dvegasandlmike">Dimitri Vegas and Like Mike</option>
 											<option value="djsnake">Dj Snake</option>
 											<option value="dblood">Dog Blood</option>
 											<option value="dvbbs">DVBBS</option>
+											<option value="feedme">Feed Me</option>
 											<option value="flegrand">Fedde Le Grand</option>
 											<option value="fcorsten">Ferry Corsten</option>
 											<option value="hardwell">Hardwell</option>
@@ -98,15 +100,19 @@
 											<option value="kaskade">Kaskade</option>
 											<option value="kparty">Knife Party</option>
 											<option value="lbluke">Laidback Luke</option>
+											<option value="luciano">Luciano</option>
 											<option value="mschulz">Markus Schulz</option>
 											<option value="msolveig">Martin Solveig</option>
+											<option value="matzo">Mat Zo</option>
 											<option value="mpage">Morgan Page</option>
+											<optoin value="nero">Nero</option>
 											<option value="nromero">Nicky Romero</option>
 											<option value="plights">Pretty Lights</option>
 											<option value="quintino">Quintino</option>
 											<option value="r3hab">R3hab</option>
 											<option value="randf">Rebecca and Fiona</option>
 											<option value="svdoorn">Sander Van Doorn</option>
+											<option value="sbtrkt">SBTRKT</option>
 											<option value="showtek">Showtek</option>
 											<option value="sangello">Steve Angello</option>
 											<option value="saoki">Steve Aoki</option>
