--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="home-page">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//code.jquery.com/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	<div class="page-wrapper">
