--- a/index.html
+++ b/index.html
@@ -65,22 +65,30 @@
 									<div id="main-selector">
 										<select name="artist">
 											<option value="blank">--None Selected--</option>
+											<option value="12thplanet">12th Planet</option>
 											<option value="atrak">A-Trak</option>
 											<option value="amuzik">Aarab Muzik</option>
 											<option value="aandb">Above & Beyond</option>
+											<option value="aclub">Adventure Club</option>
 											<option value="afrojack">Afrojack</option>
 											<option value="alesso">Alesso</option>
 											<option value="avbuuren">Armin Van Buuren</option>
 											<option value="adepartment">Art Department</option>
 											<option value="arty">Arty</option>
+											<option value="atb">ATB</option>
 											<option value="avicii">Avicii</option>
 											<option value="axwell">Axwell</option>
 											<option value="bbenassi">Benny Benassi</option>
+											<option value="bgigantic">Big Gigantic</option>
 											<option value="bplayers">Bingo Players</option>
+											<option value="botnek">Botnek</option>
 											<option value="bsafari">Bro Safari</option>
-											<option value="carnage">Carnage</option>
 											<option value="charris">Calvin Harris</option>
+											<option value="ccox">Carl Cox</option>
+											<option value="carnage">Carnage</option>
 											<option value="cazzette">Cazzette</option>
+											<option value="cgervais">Cedric Gervais</option>
+											<optoin value="clockwork">Clockwork</option>
 											<option value="dada">Dada Life</option>
 											<option value="dberlin">Dash Berlin</option>
 											<option value="dguetta">David Guetta</option>
@@ -88,32 +96,53 @@
 											<option value="dfrancis">Dillon Francis</option>
 											<option value="diplo">Diplo</option>
 											<option value="disclosure">Disclosure</option>
+											<option value="dsouth">Dirty South</option>
 											<option value="dvegasandlmike">Dimitri Vegas and Like Mike</option>
 											<option value="djsnake">Dj Snake</option>
 											<option value="dblood">Dog Blood</option>
 											<option value="dvbbs">DVBBS</option>
+											<option value="dyro">Dyro</option>
+											<option value="eprydz">Eric Prydz</option>
+											<option value="fbslim">Fat Boy Slim</option>
 											<option value="feedme">Feed Me</option>
 											<option value="flegrand">Fedde Le Grand</option>
 											<option value="fcorsten">Ferry Corsten</option>
+											<option value="floss">Flosstradamus</option>
+											<option value="fpavillion">Flux Pavilion</option>
+											<option value="fcase">Funkcase</option>
+											<option value="gemery">Gareth Emery</option>
+											<option value="gramatik">Gramatik</option>
 											<option value="hardwell">Hardwell</option>
+											<option value="hhunterz">Headhunterz</option>
 											<option value="jdahlback">John Dahlback</option>
 											<option value="kaskade">Kaskade</option>
 											<option value="kparty">Knife Party</option>
+											<optoin value="krewella">Krewella</option>
 											<option value="lbluke">Laidback Luke</option>
+											<option value="ldice">Loco Dice</option>
 											<option value="luciano">Luciano</option>
+											<option value="madeon">Madeon</option>
+											<option value="mlazer">Major Lazer</option>
 											<option value="mschulz">Markus Schulz</option>
 											<option value="msolveig">Martin Solveig</option>
 											<option value="matzo">Mat Zo</option>
 											<option value="mpage">Morgan Page</option>
 											<optoin value="nero">Nero</option>
 											<option value="nromero">Nicky Romero</option>
+											<option value="pvdyk">Paul Van Dyk</option>
+											<option value="ptong">Pete Tong</option>
+											<option value="probinson">Porter Robinson</option>
 											<option value="plights">Pretty Lights</option>
 											<option value="quintino">Quintino</option>
 											<option value="r3hab">R3hab</option>
 											<option value="randf">Rebecca and Fiona</option>
+											<option value="rhawtin">Richie Hawtin</option>
+											<option value="rlgrime">R.L Grime</option>
+											<option value="rusko">Rusko</option>
 											<option value="svdoorn">Sander Van Doorn</option>
 											<option value="sbtrkt">SBTRKT</option>
 											<option value="showtek">Showtek</option>
+											<option value="sstone">Solar Stone</option>
 											<option value="sangello">Steve Angello</option>
 											<option value="saoki">Steve Aoki</option>
 											<option value="shmafia">Swedish House Mafia</option>
@@ -122,7 +151,10 @@
 											<option value="tiesto">Tiesto</option>
 											<option value="ttrash">Tommy Trash</option>
 											<option value="tritonal">Tritonal</option>
+											<option value="Umek">Umek</option>
 											<option value="wandw">W&W</option>
+											<option value"wgartner">Wolfgang Gartner</option>
+											<option value="zedd">Zedd</option>
 											<option value="zdead">Zeds Dead</option>
 										</select>
 									</div>
