Stredm Menu Flex and Btn Prep

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								</div>
 							</div>
 							<div class="button-container">
-								<button class="stredm-panel-button">STREDM</button>
+								<button class="btn btn-primary btn-lg">STREDM</button>
 							</div>
 						</div>
 					</div>
