--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
 		</header>
 		<div class="content-wrapper container">
 			<div class="content-bg row">
-				<div class="stredming-container col-md-9">
+				<div class="stredming-container col-md-5">
+					<div class="stredming">
+						<div class="stredming-header">
+							<h1>STREDMING</h1>
+						</div>
+						<div class="stredming-results">
+							<div class="result">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="stredm-logo col-md-4">
 				</div>
 				<div class="stredm-panel-container col-md-3">
 					<div class="stredm-panel">
