stredm button functionality
jquery and script revisions

--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
 							<h1>STREDMING</h1>
 						</div>
 						<div class="stredming-results">
-							<div class="result">
-							</div>
 						</div>
 					</div>
 				</div>
@@ -88,7 +86,7 @@
 								</div>
 							</div>
 							<div class="button-container">
-								<button class="btn btn-primary btn-lg">STREDM</button>
+								<button class="stredm-panel-button btn btn-primary btn-lg">STREDM</button>
 							</div>
 						</div>
 					</div>
