adjusted containers and heights
and maxwidth of large screens

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/custom.js"></script>
-	<div class="page-wrapper">
+	<div class="page-wrapper container">
 		<header>
 			<div class="top-menu">
 				<div class="row">
