--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Stredm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" >
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="css/custom.css" rel="stylesheet" media="screen">
@@ -61,7 +62,7 @@
 									</div>
 									<div class="select-form col-md-8">
 									<form action="../scripts/stredm.php" method="post">
-									<div id="main-selector" class="ui-widget">
+									<div id="main-selector1" class="ui-widget">
 										<input type="text" id="events" />
 									</div>
 									</form>
@@ -73,7 +74,7 @@
 									</div>
 									<div class="select-form col-md-8">
 									<form action="../scripts/stredm.php" method="post">
-									<div id="main-selector"  class="ui-widget">
+									<div id="main-selector2"  class="ui-widget">
 										<input type="text" id="artists" />
 									</div>
 									</form>
