--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<div class="select-form col-md-8">
 									<form action="../scripts/stredm.php" method="post">
 									<div id="main-selector2"  class="ui-widget">
-										<input type="text" id="artists" />
+										<input type="text" id="artists" placeholder="--None Selected--" />
 									</div>
 									</form>
 									</div>
