--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</div>
 							<div class="instructions-container">
 								<div class="text-container">
-									<p>2 clicks, 200+ sets<br>Fill one in for a random set<br>Fill both in for a specific set</p>
+									<p>3 clicks, 300+ sets<br>Fill one in for a suggested set<br>Fill both in for a specific set</p>
 								</div>
 							</div>
 							<div class="button-container">
