--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<div class="links-menu col-md-5">
 						<div class="row">
 							<div class="link col-md-4"><a href="/about.html" >About</a></div>
-							<div class="link col-md-4"><a href="http://stredm.tumblr.com" >Blog</a></div>
+							<div class="link col-md-4"><a href="http://stredm.tumblr.com" target="_blank">Blog</a></div>
 						</div>
 					</div>
 				</div>
