all col-md-* to col-sm-*
for tablets in landscape

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 		<header>
 			<div class="top-menu">
 				<div class="row">
-					<div class="site-name col-md-6 col-md-offset-1">
+					<div class="site-name col-sm-6 col-sm-offset-1">
 						<div><a href="stredm.com"></a>STREDM</div>
 					</div>
-					<div class="links-menu col-md-5">
+					<div class="links-menu col-sm-5">
 						<div class="row">
-							<div class="link col-md-4"><a href="/about.html" >About</a></div>
-							<div class="link col-md-4"><a href="http://stredm.tumblr.com" target="_blank">Blog</a></div>
+							<div class="link col-sm-4"><a href="/about.html" >About</a></div>
+							<div class="link col-sm-4"><a href="http://stredm.tumblr.com" target="_blank">Blog</a></div>
 						</div>
 					</div>
 				</div>
@@ -41,7 +41,7 @@
 		</header>
 		<div class="content-wrapper container">
 			<div class="content-bg row">
-				<div class="stredming-container col-md-8">
+				<div class="stredming-container col-sm-8">
 					<div class="stredming">
 						<div class="stredming-header">
 							<h1>STREDMING</h1>
@@ -50,17 +50,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="stredm-logo col-md-1">
+				<div class="stredm-logo col-sm-1">
 				</div>
-				<div class="stredm-panel-container col-md-3">
+				<div class="stredm-panel-container col-sm-3">
 					<div class="stredm-panel">
 						<div class="stredm-select-container">
 							<div class="select-container">
 								<div class="event-select row">
-									<div class="select-text col-md-4">
+									<div class="select-text col-sm-4">
 										<p>EVENT: </p>
 									</div>
-									<div class="select-form col-md-8">
+									<div class="select-form col-sm-8">
 									<form action="../scripts/stredm.php" method="post">
 									<div id="main-selector1" class="ui-widget">
 										<input type="text" id="events" />
@@ -69,10 +69,10 @@
 									</div>
 								</div>
 								<div class="artist-select row">
-									<div class="select-text col-md-4">
+									<div class="select-text col-sm-4">
 										<p>ARTIST:</p>
 									</div>
-									<div class="select-form col-md-8">
+									<div class="select-form col-sm-8">
 									<form action="../scripts/stredm.php" method="post">
 									<div id="main-selector2"  class="ui-widget">
 										<input type="text" id="artists" placeholder="-----None Selected----" />
