--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/custom.js"></script>
+	<div class="scroll-wrapper">
 	<div class="page-wrapper container">
 		<header>
 			<div class="top-menu">
 				<div class="row">
-					<div class="site-name col-sm-6 col-sm-offset-1">
+					<div class="site-name col-sm-6 text-center">
 						<div><a href="stredm.com"></a>STREDM</div>
 					</div>
-					<div class="links-menu col-sm-5">
+					<div class="links-menu col-sm-6 text-center">
 						<div class="row">
-							<div class="link col-sm-4"><a href="/about.html" >About</a></div>
-							<div class="link col-sm-4"><a href="http://stredm.tumblr.com" target="_blank">Blog</a></div>
+							<div class="link col-sm-6"><a href="/about.html" >About</a></div>
+							<div class="link col-sm-6"><a href="http://stredm.tumblr.com" target="_blank">Blog</a></div>
 						</div>
 					</div>
 				</div>
@@ -52,7 +53,7 @@
 				</div>
 				<div class="stredm-logo col-sm-1">
 				</div>
-				<div class="stredm-panel-container col-sm-3">
+				<div class="stredm-panel-container col-sm-3 text-center">
 					<div class="stredm-panel">
 						<div class="stredm-select-container">
 							<div class="select-container">
@@ -94,6 +95,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 	<script type="text/javascript">
 var _sf_async_config={uid:50138,domain:"stredm.com",useCanonical:true};
