changed script name to working script

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<p>EVENT: </p>
 									</div>
 									<div class="select-form col-sm-8">
-									<form action="../scripts/stredm.php" method="post">
+									<form action="../scripts/request.php" method="post">
 									<div id="main-selector1" class="ui-widget">
 										<input type="text" id="events" />
 									</div>
@@ -74,7 +74,7 @@
 										<p>ARTIST:</p>
 									</div>
 									<div class="select-form col-sm-8">
-									<form action="../scripts/stredm.php" method="post">
+									<form action="../scripts/request.php" method="post">
 									<div id="main-selector2"  class="ui-widget">
 										<input type="text" id="artists" placeholder="-----None Selected----" />
 									</div>
