--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							</div>
 							<div class="instructions-container">
 								<div class="text-container">
-									<p>3 clicks, 300+ sets<br>Fill one in for a suggested set<br>Fill both in for a specific set</p>
+									<p>300 sets, 3 clicks away<br>Fill one in for a suggested set<br>Fill both in for a specific set</p>
 								</div>
 							</div>
 							<div class="button-container">
