--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<div class="select-form col-sm-8">
 									<form action="../scripts/request.php" method="post">
 									<div id="main-selector1" class="ui-widget">
-										<input type="text" id="events" value="Tomorrow World 2013"/>
+										<input type="text" id="events" name="events" value="Tomorrow World 2013"/>
 									</div>
 									</form>
 									</div>
@@ -76,7 +76,7 @@
 									<div class="select-form col-sm-8">
 									<form action="../scripts/request.php" method="post">
 									<div id="main-selector2"  class="ui-widget">
-										<input type="text" id="artists" placeholder="Search an artist..." />
+										<input type="text" id="artists" name="artists" placeholder="Search an artist..." />
 									</div>
 									</form>
 									</div>
