--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="site-name col-sm-6 text-center">
-						<div><a href="stredm.com"></a>STREDM</div>
+						<img src="./images/header.png" class="header-image">
+						<div><a href="stredm.com"></a></div>
 					</div>
 					<div class="links-menu col-sm-6 text-center">
 						<div class="row">
