--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 						</div>
 						<div class="stredming-results">
 						</div>
+						<div class="stredming-bottom row">
+							<div class="twitter-container col-sm-6">
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="stredm-logo col-sm-1">
