Revert "Test for release today"
This reverts commit 00a9f5e26f8e1d62942ace20db7ffb42cd6581f4.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</div>
 					<div class="links-menu col-sm-3 text-center">
 						<div class="row">
-							<div class="link col-sm-6"><a href="/about.html" ></a></div>
+							<div class="link col-sm-6"><a href="/about.html" >About</a></div>
 							<div class="link col-sm-6"><a href="http://stredm.tumblr.com" target="_blank">Blog</a></div>
 						</div>
 					</div>
