--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ mixpanel.init("ea091fd1d0073af2c48de623590cd53b");</script><!-- end Mixpanel -->
 							</div>
 							<div class="instructions-container">
 								<div class="text-container">
-									<p>300 sets, 3 clicks away<br>Fill one in for a suggested set<br>Fill both in for a specific set</p>
+									<p>300 sets, 3 clicks away<br>Random: "Artist" OR "Event"<br>Specific: "Artist" AND "Event"</p>
 								</div>
 							</div>
 							<div class="button-container">
